# FileManager

./: .gitignore  CMakeLists.txt
exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow1.cpp  mainwindow1.h
src/: filemanager.cpp  filemanager.h  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
tests/tests_src/: main.cpp  test.cpp  test.h
