cmake_minimum_required(VERSION 3.16)

project(FileManagerLib LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)

add_library(FileManagerLib
    MainWindow.cpp
    MainWindow.h
)

target_link_libraries(FileManagerLib
    PUBLIC
        Qt6::Core
        Qt6::Gui
        Qt6::Widgets
)
